--- a/index.html
+++ b/index.html
@@ -16,12 +16,17 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/ef60af9896.js"
+      crossorigin="anonymous"
+    ></script>
     <link rel="stylesheet" href="styles/portfolio.css" />
     <title>Document</title>
   </head>
   <body>
     <h1>Hello World</h1>
     <p>Hi there</p>
+    <i class="fa-brands fa-instagram"></i>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
