Added about me section

--- a/index.html
+++ b/index.html
@@ -34,6 +34,27 @@
       <p>I am a front-end developer based in the Netherlands</p>
       <a href="#" class="btn btn-light mt-4">SCROLL FOR MORE</a>
     </div>
+    <div class="about">
+      <div class="row">
+        <div class="col-md-6">
+          <h3>About me</h3>
+          <p>
+            I’ve always been passionate about pixels and haven’t stopped
+            learning about new technologies. Other than sitting in front of my
+            display I enjoy myself in casual sports, such as bowling, jogging or
+            playing piano. I'm grateful that coding allows me to work from
+            anywhere. I also like sharing my experiences on instagram.
+          </p>
+        </div>
+        <div class="col-md-6">
+          <img src="images/developer.jpg" alt="developer" class="image-fluid" />
+        </div>
+        <div class="skillset">
+          <h3>My skillset</h3>
+        </div>
+      </div>
+    </div>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
