--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </h1>
 
       <p>I am a front-end developer based in the Netherlands</p>
-      <a href="#" class="btn btn-light mt-4">SCROLL FOR MORE</a>
+      <a href="#" class="btn btn-branding mt-4">SCROLL FOR MORE</a>
     </div>
     <div class="about">
       <div class="row">
@@ -50,7 +50,35 @@
           <img src="images/developer.jpg" alt="developer" class="image-fluid" />
         </div>
         <div class="skillset">
-          <h3>My skillset</h3>
+          <h3 class="mt-3">My skillset</h3>
+          <div class="row">
+            <div class="col-md-4">HTML</div>
+            <div class="col-md-4">CSS</div>
+            <div class="col-md-4">JavaScript</div>
+          </div>
+          <div class="row">
+            <div class="col-md-4">Bootstrap</div>
+            <div class="col-md-4">API</div>
+            <div class="col-md-4">Responsive</div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="projects">
+      <h3>Projects</h3>
+      <div class="row">
+        <div class="col-md-6">
+          <img src="images/weather.png" alt="weather" class="image-fluid" />
+        </div>
+        <div class="col-md-6">
+          <h3>Weather app</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
+            aperiam provident tempora? Cumque adipisci, non dolorem quia, odit
+            qui alias veniam excepturi rem dolor fugit dignissimos, sed
+            voluptatum blanditiis harum.
+          </p>
+          <a href="#" class="btn btn-branding mt-4">Launch Weather app</a>
         </div>
       </div>
     </div>
