--- a/index.html
+++ b/index.html
@@ -26,18 +26,20 @@
   <body>
     <div class="hero">
       <h3 class="mb-5">HELLO, IT'S ME</h3>
+
       <h1 class="mb-4">
         ANASTASIIA
+
         <i class="fa-solid fa-circle"></i>
       </h1>
 
       <p>I am a front-end developer based in the Netherlands</p>
-      <a href="#" class="btn btn-branding mt-4">SCROLL FOR MORE</a>
+      <a href="#" class="btn btn-branding mt-4">Scroll for more</a>
     </div>
     <div class="about">
       <div class="row">
-        <div class="col-md-6">
-          <h3>About me</h3>
+        <div class="col-md-6 align-self-center aboutMe">
+          <h3 class="mb-4">About me</h3>
           <p>
             I’ve always been passionate about pixels and haven’t stopped
             learning about new technologies. Other than sitting in front of my
@@ -50,13 +52,13 @@
           <img src="images/developer.jpg" alt="developer" class="image-fluid" />
         </div>
         <div class="skillset">
-          <h3 class="mt-3">My skillset</h3>
-          <div class="row">
+          <h3 class="mb-4">My skillset</h3>
+          <div class="row text-md-center p-2">
             <div class="col-md-4">HTML</div>
             <div class="col-md-4">CSS</div>
             <div class="col-md-4">JavaScript</div>
           </div>
-          <div class="row">
+          <div class="row text-md-center p-2">
             <div class="col-md-4">Bootstrap</div>
             <div class="col-md-4">API</div>
             <div class="col-md-4">Responsive</div>
@@ -65,12 +67,12 @@
       </div>
     </div>
     <div class="projects">
-      <h3>Projects</h3>
-      <div class="row">
+      <h2 class="text-center p-5 myProjects">Projects</h2>
+      <div class="row m-5">
         <div class="col-md-6">
-          <img src="images/weather.png" alt="weather" class="image-fluid" />
+          <img src="images/weather.jpg" alt="weather" class="image-fluid" />
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6 align-self-center">
           <h3>Weather app</h3>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
@@ -79,6 +81,22 @@
             voluptatum blanditiis harum.
           </p>
           <a href="#" class="btn btn-branding mt-4">Launch Weather app</a>
+        </div>
+      </div>
+
+      <div class="row m-5">
+        <div class="col-md-6 align-self-center">
+          <h3>Hometown site</h3>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
+            aperiam provident tempora? Cumque adipisci, non dolorem quia, odit
+            qui alias veniam excepturi rem dolor fugit dignissimos, sed
+            voluptatum blanditiis harum.
+          </p>
+          <a href="#" class="btn btn-branding mt-4">go to the site</a>
+        </div>
+        <div class="col-md-6">
+          <img src="images/hometown.jpg" alt="weather" class="image-fluid" />
         </div>
       </div>
     </div>
