--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
       </h1>
 
       <p>I am a front-end developer based in the Netherlands</p>
-      <a href="#" class="btn btn-branding mt-4">Scroll for more</a>
+      <a href="#about" class="btn btn-branding mt-4">Scroll for more</a>
     </div>
-    <div class="about">
+    <div class="about" id="about">
       <div class="row">
         <div class="col-md-6 align-self-center aboutMe">
           <h3 class="mb-4">About me</h3>
@@ -84,8 +84,8 @@
         </div>
       </div>
 
-      <div class="row m-5">
-        <div class="col-md-6 align-self-center">
+      <div class="row mt-5">
+        <div class="col-md-6 align-self-center myHometown">
           <h3>Hometown site</h3>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
@@ -100,7 +100,23 @@
         </div>
       </div>
     </div>
-
+    <div class="certificates">
+      <h2 class="text-center p-5 myCertificates">certificates</h2>
+      <div class="certification-links mb-5">
+        <a
+          href="https://www.shecodes.io/certificates/dbcd2cfeb43f80fc1dd370eb312028cb"
+          class="btn btn-branding mt-4 basic-link"
+          target="_blank"
+          >SheCodes Basic</a
+        >
+        <a
+          href="https://www.shecodes.io/certificates/9183f9bbc8452ea2734afe4e16704978"
+          class="btn btn-branding mt-4 plus-link"
+          target="_blank"
+          >SheCodes Plus</a
+        >
+      </div>
+    </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
