--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     </div>
     <div class="certificates">
       <h2 class="text-center p-5 myCertificates">certificates</h2>
-      <div class="certification-links mb-5">
+      <div class="certification-links">
         <a
           href="https://www.shecodes.io/certificates/dbcd2cfeb43f80fc1dd370eb312028cb"
           class="btn btn-branding mt-4 basic-link"
@@ -116,6 +116,10 @@
           >SheCodes Plus</a
         >
       </div>
+    </div>
+    <div class="contact">
+      <h3 class="p-5 text-center">What's next</h3>
+      <h2 class="text-center contactMe">get in touch!</h2>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
