worked on responsiveness

--- a/index.html
+++ b/index.html
@@ -27,13 +27,11 @@
     <div class="hero">
       <h3 class="mb-5">HELLO, IT'S ME</h3>
 
-      <h1 class="mb-4">
-        ANASTASIIA
+      <h1 class="mb-4">ANASTASIIA<span class="dot">.</span></h1>
 
-        <i class="fa-solid fa-circle"></i>
-      </h1>
-
-      <p>I am a front-end developer based in the Netherlands</p>
+      <p class="text-muted">
+        I am a front-end developer based in the Netherlands
+      </p>
       <a href="#about" class="btn btn-branding mt-4">Scroll for more</a>
     </div>
     <div class="about" id="about">
@@ -48,7 +46,7 @@
             anywhere. I also like sharing my experiences on instagram.
           </p>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-6 d-none d-md-block">
           <img src="images/developer.jpg" alt="developer" class="image-fluid" />
         </div>
         <div class="skillset">
@@ -70,7 +68,11 @@
       <h2 class="text-center p-5 myProjects">Projects</h2>
       <div class="row m-5">
         <div class="col-md-6">
-          <img src="images/weather.jpg" alt="weather" class="image-fluid" />
+          <img
+            src="images/weather.jpg"
+            alt="weather"
+            class="image-fluid d-none d-md-block"
+          />
         </div>
         <div class="col-md-6 align-self-center">
           <h3>Weather app</h3>
@@ -80,7 +82,12 @@
             qui alias veniam excepturi rem dolor fugit dignissimos, sed
             voluptatum blanditiis harum.
           </p>
-          <a href="#" class="btn btn-branding mt-4">Launch Weather app</a>
+          <a
+            href="https://www.shecodes.io/workshops/shecodes-plus-ba187345-7964-4eb6-a662-b7b329653931/projects/1213186"
+            class="btn btn-branding mt-4"
+            target="_blank"
+            >Launch Weather app</a
+          >
         </div>
       </div>
 
@@ -93,10 +100,19 @@
             qui alias veniam excepturi rem dolor fugit dignissimos, sed
             voluptatum blanditiis harum.
           </p>
-          <a href="#" class="btn btn-branding mt-4">go to the site</a>
+          <a
+            href="https://www.shecodes.io/workshops/shecodes-basics-8f6ccebe-8505-4a7a-ad4e-e67033a5733d/projects/970567"
+            class="btn btn-branding mt-4"
+            target="_blank"
+            >go to the site</a
+          >
         </div>
         <div class="col-md-6">
-          <img src="images/hometown.jpg" alt="weather" class="image-fluid" />
+          <img
+            src="images/hometown.jpg"
+            alt="weather"
+            class="image-fluid d-none d-md-block"
+          />
         </div>
       </div>
     </div>
