--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             class="image-fluid d-none d-md-block"
           />
         </div>
-        <div class="col-md-6 align-self-center">
+        <div class="col-md-6 align-self-center weather">
           <h3>Weather app</h3>
           <p>
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
