--- a/index.html
+++ b/index.html
@@ -43,11 +43,15 @@
             learning about new technologies. Other than sitting in front of my
             display I enjoy myself in casual sports, such as bowling, jogging or
             playing piano. I'm grateful that coding allows me to work from
-            anywhere. I also like sharing my experiences on instagram.
+            anywhere.
           </p>
         </div>
         <div class="col-md-6 d-none d-md-block">
-          <img src="images/developer.jpg" alt="developer" class="image-fluid" />
+          <img
+            src="images/developer.jpg"
+            alt="developer"
+            class="image-fluid imgDeveloper"
+          />
         </div>
         <div class="skillset">
           <h3 class="mb-4">My skillset</h3>
@@ -111,14 +115,14 @@
           <img
             src="images/hometown.jpg"
             alt="weather"
-            class="image-fluid d-none d-md-block"
+            class="image-fluid d-none d-md-block imgHometown"
           />
         </div>
       </div>
     </div>
     <div class="certificates">
       <h2 class="text-center p-5 myCertificates">certificates</h2>
-      <div class="certification-links">
+      <div class="certification-links p-3">
         <a
           href="https://www.shecodes.io/certificates/dbcd2cfeb43f80fc1dd370eb312028cb"
           class="btn btn-branding mt-4 basic-link"
@@ -135,7 +139,23 @@
     </div>
     <div class="contact">
       <h3 class="p-5 text-center">What's next</h3>
-      <h2 class="text-center contactMe">get in touch!</h2>
+      <h2 class="text-center contactMe p-5">get in touch!</h2>
+    </div>
+    <div class="contactDetails">
+      <div class="row">
+        <div class="col-md-12 p-5">
+          <h3>address</h3>
+
+          <p>Schagen, Netherlands</p>
+
+          <h3>email</h3>
+          <p>
+            <a href="mailto:kichkimet@gmail.com" class="p-3">
+              kichkimet@gmail.com</a
+            >
+          </p>
+        </div>
+      </div>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
