--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <title>Document</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-black sticky-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-black fixed-top">
       <div class="container-fluid">
         <a class="navbar-brand" href="#"></a>
         <button
