added Social media links

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
     </div>
     <div class="contact" id="contact">
       <h3 class="p-5 text-center">What's next</h3>
-      <h2 class="text-center contactMe p-5">get in touch!</h2>
+      <h2 class="text-center contactMe p-4">get in touch!</h2>
     </div>
     <div class="contactDetails">
       <div class="row">
@@ -205,10 +205,31 @@
 
           <h3>email</h3>
           <p>
-            <a href="mailto:kichkimet@gmail.com" class="p-3">
+            <a
+              href="mailto:kichkimet@gmail.com"
+              class="text-decoration-none text-light p-3"
+            >
               kichkimet@gmail.com</a
             >
           </p>
+          <a
+            href="https://github.com/castelana"
+            target="_blank"
+            title="Anastasiia's GitHub"
+            ><i class="fa-brands fa-github m-3"></i
+          ></a>
+          <a
+            href="https://www.instagram.com/castel_ana/"
+            target="_blank"
+            title="Anastasiia's Instagram"
+            ><i class="fa-brands fa-instagram m-3"></i
+          ></a>
+          <a
+            href="https://www.linkedin.com/in/ana-kichkimet"
+            target="_blank"
+            title="Anastasiia's Linkedin"
+            ><i class="fa-brands fa-linkedin m-3"></i
+          ></a>
         </div>
       </div>
     </div>
