--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="decription"
+      content="Anastasiia Kichkimet is a front-end developer located in the Netherlands."
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -21,7 +25,7 @@
       crossorigin="anonymous"
     ></script>
     <link rel="stylesheet" href="styles/portfolio.css" />
-    <title>Document</title>
+    <title>Front-end developer - Anastasiia Kichkimet</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-black fixed-top">
@@ -145,6 +149,7 @@
             href="https://www.shecodes.io/workshops/shecodes-plus-ba187345-7964-4eb6-a662-b7b329653931/projects/1213186"
             class="btn btn-branding mt-4"
             target="_blank"
+            title="Weather app"
             >Launch Weather app</a
           >
         </div>
@@ -163,13 +168,14 @@
             href="https://www.shecodes.io/workshops/shecodes-basics-8f6ccebe-8505-4a7a-ad4e-e67033a5733d/projects/970567"
             class="btn btn-branding mt-4"
             target="_blank"
+            title="Hometown page"
             >go to the site</a
           >
         </div>
         <div class="col-md-6">
           <img
             src="images/hometown.jpg"
-            alt="weather"
+            alt="hometown"
             class="image-fluid d-none d-md-block imgHometown"
           />
         </div>
@@ -182,12 +188,14 @@
           href="https://www.shecodes.io/certificates/dbcd2cfeb43f80fc1dd370eb312028cb"
           class="btn btn-branding mt-4 basic-link"
           target="_blank"
+          title="See certificate"
           >SheCodes Basic</a
         >
         <a
           href="https://www.shecodes.io/certificates/9183f9bbc8452ea2734afe4e16704978"
           class="btn btn-branding mt-4 plus-link"
           target="_blank"
+          title="See certificate"
           >SheCodes Plus</a
         >
       </div>
