--- a/index.html
+++ b/index.html
@@ -216,6 +216,7 @@
             <a
               href="mailto:kichkimet@gmail.com"
               class="text-decoration-none text-light p-3"
+              title="Contact Anastasiia"
             >
               kichkimet@gmail.com</a
             >
