changed project descriptions

--- a/index.html
+++ b/index.html
@@ -140,10 +140,12 @@
         <div class="col-md-6 align-self-center weather">
           <h3>Weather app</h3>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
-            aperiam provident tempora? Cumque adipisci, non dolorem quia, odit
-            qui alias veniam excepturi rem dolor fugit dignissimos, sed
-            voluptatum blanditiis harum.
+            I built a Vanilla JavaScript weather app in SheCodes Plus, an
+            advanced 8-week JavaScript coding workshop. Building upon my
+            previously-gained knowledge, I also became skilled in Bootstrap,
+            API’s, real-life development workflow, hosting, and advanced
+            JavaScript. I combined all of these skills to create a
+            fully-functioning weather app.
           </p>
           <a
             href="https://www.shecodes.io/workshops/shecodes-plus-ba187345-7964-4eb6-a662-b7b329653931/projects/1213186"
@@ -159,10 +161,11 @@
         <div class="col-md-6 align-self-center myHometown">
           <h3>Hometown site</h3>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam
-            aperiam provident tempora? Cumque adipisci, non dolorem quia, odit
-            qui alias veniam excepturi rem dolor fugit dignissimos, sed
-            voluptatum blanditiis harum.
+            I entered the world of front-end development by gaining some
+            knowledge in HTML, CSS, and JavaScript. I used my knowledge of these
+            languages, along with my new skills in VS Code, to build a landing
+            page about my hometown. The page utilizes JavaScript functions to
+            create user interaction.
           </p>
           <a
             href="https://www.shecodes.io/workshops/shecodes-basics-8f6ccebe-8505-4a7a-ad4e-e67033a5733d/projects/970567"
@@ -176,7 +179,7 @@
           <img
             src="images/hometown.jpg"
             alt="hometown"
-            class="image-fluid d-none d-md-block imgHometown"
+            class="image-fluid d-none d-md-block"
           />
         </div>
       </div>
