updated css of links

--- a/index.html
+++ b/index.html
@@ -203,14 +203,14 @@
         >
         <a
           href="https://www.shecodes.io/certificates/e50b2360134455751265c42de9b7a47f"
-          class="btn btn-branding mt-4 plus-link"
+          class="btn btn-branding mt-4 responsive-link"
           target="_blank"
           title="See certificate"
           >SheCodes Responsive</a
         >
         <a
           href="https://www.shecodes.io/certificates/49185b763ce8a5d211fecb8e5416215a"
-          class="btn btn-branding mt-4 plus-link"
+          class="btn btn-branding mt-4 react-link"
           target="_blank"
           title="See certificate"
           >SheCodes React</a
