Added grid to certificates section

--- a/index.html
+++ b/index.html
@@ -186,35 +186,39 @@
     </div>
     <div class="certificates" id="certificates">
       <h2 class="text-center p-5 myCertificates">certificates</h2>
-      <div class="certification-links p-3">
-        <a
-          href="https://www.shecodes.io/certificates/dbcd2cfeb43f80fc1dd370eb312028cb"
-          class="btn btn-branding mt-4 basic-link"
-          target="_blank"
-          title="See certificate"
-          >SheCodes Basic</a
-        >
-        <a
-          href="https://www.shecodes.io/certificates/9183f9bbc8452ea2734afe4e16704978"
-          class="btn btn-branding mt-4 plus-link"
-          target="_blank"
-          title="See certificate"
-          >SheCodes Plus</a
-        >
-        <a
-          href="https://www.shecodes.io/certificates/e50b2360134455751265c42de9b7a47f"
-          class="btn btn-branding mt-4 responsive-link"
-          target="_blank"
-          title="See certificate"
-          >SheCodes Responsive</a
-        >
-        <a
-          href="https://www.shecodes.io/certificates/49185b763ce8a5d211fecb8e5416215a"
-          class="btn btn-branding mt-4 react-link"
-          target="_blank"
-          title="See certificate"
-          >SheCodes React</a
-        >
+      <div class="row text-md-center p-3">
+        <div class="col-md-6">
+          <a
+            href="https://www.shecodes.io/certificates/dbcd2cfeb43f80fc1dd370eb312028cb"
+            class="btn btn-branding mt-4 basic-link"
+            target="_blank"
+            title="See certificate"
+            >SheCodes Basic</a
+          >
+          <a
+            href="https://www.shecodes.io/certificates/9183f9bbc8452ea2734afe4e16704978"
+            class="btn btn-branding mt-4 plus-link"
+            target="_blank"
+            title="See certificate"
+            >SheCodes Plus</a
+          >
+        </div>
+        <div class="col-md-6">
+          <a
+            href="https://www.shecodes.io/certificates/e50b2360134455751265c42de9b7a47f"
+            class="btn btn-branding mt-4 responsive-link"
+            target="_blank"
+            title="See certificate"
+            >Responsive Web</a
+          >
+          <a
+            href="https://www.shecodes.io/certificates/49185b763ce8a5d211fecb8e5416215a"
+            class="btn btn-branding mt-4 react-link"
+            target="_blank"
+            title="See certificate"
+            >SheCodes React</a
+          >
+        </div>
       </div>
     </div>
     <div class="contact" id="contact">
